Fixed footer margins
- Fixed left and right margins for the wallpaper preview page (Index margins stay the same)

--- a/static/app.css
+++ b/static/app.css
@@ -465,6 +465,11 @@ header {
 	font-size: 10pt;
 }
 
+#wppagefooter {
+	margin-left: 24px;
+	margin-right: 24px;
+}
+
 @media only screen and (max-width: 1024px) {
 	.wallprev-container {
 		width: 75vw;
