--- a/static/app.css
+++ b/static/app.css
@@ -41,6 +41,7 @@
   	-moz-user-drag: none;
   	-o-user-drag: none;
 	user-drag: none;
+	user-select: none;
 	-webkit-user-select: none;
 	-webkit-tap-highlight-color: transparent;
 	-webkit-touch-callout: none;
@@ -515,6 +516,114 @@ header {
 	font-size: 8pt;
 }
 
+#interaction-prevention {
+    display: none;
+}
+
+.mobile-notice {
+    display: none;
+}
+
+#info {
+    display: none;
+}
+
+.icons-container {
+    margin: 72px auto 0 auto;
+    width: 964px;
+    color: rgba(255, 255, 255, 0.95);
+    padding: 0 24px 0 24px;
+}
+
+.icons-container h1 { 
+    margin-bottom: 22px;
+    font-size: 18pt;
+    font-weight: bolder;
+    letter-spacing: 1px;
+    cursor: default;
+}
+
+.icon-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 24px;
+    grid-row-gap: 24px;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+.icon {
+    display: flex;
+    height: 228px;
+    justify-content: center;
+    text-align: center;
+    border-radius: 12px;
+    background: rgba(255, 255, 255, 0.06);
+    transition: transform 336ms, opacity 240ms;
+    transition-delay: 20ms;
+}
+
+.icon a {
+    width: 211px;
+}
+
+.icon img {
+    width: 128px;
+    object-fit: cover;
+    margin-top: 28px;
+}
+
+#name, #download-hint {
+    position: absolute;
+    display: flex;
+    width: 211px;
+    height: 48px;
+    justify-content: center;
+    align-items: center;
+    padding: 0 24px 0 24px;
+    transition: transform 336ms, opacity 240ms;
+    transition-delay: 20ms;
+}
+
+#name {
+    color: rgba(255, 255, 255, 0.336);
+    font-size: 11pt;
+    opacity: 1;
+    transform: scale(1);
+}
+
+#download-hint {
+    color: rgba(255, 255, 255, 0.9);
+    font-size: 14pt;
+    font-weight: bolder;
+    opacity: 0;
+    transform: scale(0.6);
+    transition: transform 120ms, opacity 180ms;
+}
+
+.icon:hover #name {
+    opacity: 0;
+    transition: transform 120ms cubic-bezier(.2,.6,.6,1), opacity 180ms cubic-bezier(.2,.6,.6,1);
+}
+
+.icon:hover #download-hint {
+    transform: scale(1);
+    opacity: 1;
+    transition: transform 120ms cubic-bezier(.2,.6,.6,1), opacity 180ms cubic-bezier(.2,.6,.6,1);
+}
+
+.icon:hover {
+    transform: scale(0.95);
+    background: rgba(255, 255, 255, 0.03);
+    transition: transform 180ms cubic-bezier(.2,.6,.6,1), opacity 180ms cubic-bezier(.2,.6,.6,1);
+}
+
+.icon:hover img {
+    opacity: 0.6;
+    transition: transform 180ms cubic-bezier(.2,.6,.6,1), opacity 180ms cubic-bezier(.2,.6,.6,1);
+}
+
 #wppagefooter, #wppagenotice {
 	margin-left: 24px;
 	margin-right: 24px;
@@ -524,6 +633,23 @@ header {
 	.wallprev-container {
 		width: 75vw;
 	}
+	.icons-container {
+        width: 723px;
+        margin: 72px auto 0 auto;
+    }
+    .icon-grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media only screen and (max-width: 826px) {
+	.icons-container {
+        width: 494px;
+        margin: 72px auto 0 auto;
+    }
+    .icon-grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 @media only screen and (max-width: 499px) {
@@ -630,6 +756,114 @@ header {
 		margin-left: 24px;
 		margin-right: 24px;
 	}
+
+	#interaction-prevention {
+        display: block;
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        margin-left: -12px;
+		margin-right: 0;
+        padding: 0;
+        z-index: 2;
+    }
+
+    .mobile-notice {
+        display: flex;
+        height: 72px;
+        margin: 0 0 24px 0;
+        border-radius: 8px;
+        align-items: center;
+        background: rgba(255, 255, 255, 0.06);
+    }
+
+    .mobile-notice p {
+        width: 228px;
+        margin-top: 2px;
+        font-size: 11pt;
+        color: rgba(255, 255, 255, 0.336);
+
+    }
+
+    #info {
+        display: block;
+        width: 20px;
+        margin: 0 16px 0 40px;
+        opacity: 0.28;
+    }
+
+    .icons-container {
+		width: 100%;
+		margin-top: 72px;
+		margin-left: 0;
+		margin-right: 0;
+        padding: 0 12px 0 12px;
+	}
+
+    .icons-container h1 { 
+        margin-left: 4px;
+    }
+
+    .icon-grid {
+        grid-column-gap: 12px;
+        grid-row-gap: 12px;
+    }
+    
+    .icon {
+        height: 196px;
+        background: rgba(255, 255, 255, 0.06);
+        transition: none;
+    }
+
+    .icon a {
+        width: 128px;
+    }
+
+    .icon img {
+        width: 96px;
+        margin-top: 28px;
+    }
+
+    #name, #download-hint {
+        width: 128px;
+        height: 48px;
+        justify-content: center;
+        align-items: center;
+        padding: 0 12px 0 12px;
+        transition: none;
+        transition-delay: none;
+    }
+    
+    #name {
+        font-size: 11pt;
+    }
+    
+    #download-hint {
+        display: none;
+        transition: none;
+    }
+
+    .icon:hover #name {
+        opacity: 1;
+        transition: none;
+    }
+    
+    .icon:hover #download-hint {
+        transform: none;
+        opacity: 0;
+        transition: none;
+    }
+    
+    .icon:hover {
+        transform: none;
+        background: rgba(255, 255, 255, 0.06);
+        transition: none;
+    }
+    
+    .icon:hover img {
+        opacity: 1;
+        transition: none;
+    }
 }
 
 @media (prefers-color-scheme: dark) {
